调整logo以及完善语音播报

--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,28 @@ VITE_API_TIMEOUT=30000
 VITE_DEBUG=true
 
 # ===========================================
+# 语音合成配置 (TTS)
+# ===========================================
+# TTS服务提供商 (browser, google, azure, elevenlabs)
+# browser: 浏览器原生Web Speech API (免费，无需配置)
+# google: Google Cloud TTS (高质量，$4/百万字符)
+# azure: Azure Cognitive Services TTS (高质量，$16/百万字符)
+# elevenlabs: Eleven Labs AI语音 (最高质量，$0.30/1000字符)
+VITE_TTS_PROVIDER=browser
+
+# Google Cloud TTS API密钥 (如果使用google)
+# 从 https://console.cloud.google.com/ 获取
+# VITE_TTS_API_KEY=your_google_tts_api_key_here
+
+# Azure TTS配置 (如果使用azure)
+# VITE_TTS_API_KEY=your_azure_subscription_key_here
+# VITE_TTS_REGION=eastasia
+
+# Eleven Labs API密钥 (如果使用elevenlabs)
+# 从 https://elevenlabs.io/ 获取
+# VITE_TTS_API_KEY=your_elevenlabs_api_key_here
+
+# ===========================================
 # 可选配置
 # ===========================================
 # Sentry错误监控DSN（可选）
